attempt 6 to fix background issue on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,7 @@ body{
     background-image: url("https://i.imgur.com/5vkTr0E.jpg");
     background-position: top;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100vh;
     background-attachment: fixed;
     height: 100%;
     width: 100%;
